--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@supabase/supabase-js": "^2.86.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.556.0",
     "next": "16.0.7",
     "react": "19.2.0",
